pi-sensor-app/www/css/style.css
/* Empty. Add your own CSS if you like */
md-toolbar md-icon.md-default-theme {
  color: white;
}

.toolbar span {
  color: white;
}

.md-datepicker-input-container {
  width: 100%;
  margin-left: 0px;
}

md-divider {
  margin-top: 0;
  margin-bottom: 0; }
md-list {
  padding-top: 0; }
md-list-item > p,
md-list-item > ._md-list-item-inner > p,
md-list-item ._md-list-item-inner > p,
md-list-item ._md-list-item-inner > ._md-list-item-inner > p {
  -webkit-user-select: none;
  /* Chrome all / Safari all */
  -moz-user-select: none;
  /* Firefox all */
  -ms-user-select: none;
  /* IE 10+ */
  user-select: none;
  /* Likely future */ }

